<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tbLayout"
                android:layout_width="match_parent"
                android:layout_height="729dp"
                android:background="#EC7171"
                android:backgroundTint="#83F4F2F3"
                android:foregroundTint="#F17474"
                android:textAlignment="viewStart">

                <TableRow
                    android:id="@+id/trName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:backgroundTint="#46A3C6"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/lbName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:paddingHorizontal="10dp"
                        android:text="@string/nameMain"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:hint="@string/nameMain"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:id="@+id/trLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/lbLastName"
                        android:layout_width="0dp"
                        android:layout_height="49dp"
                        android:layout_weight="0.3"
                        android:paddingHorizontal="10dp"
                        android:text="@string/lastNameMain"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/txtLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:hint="@string/lastNameMain"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:id="@+id/trAge"
                    android:layout_width="match_parent"
                    android:layout_height="163dp"
                    android:layout_weight="0"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/lbAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:paddingHorizontal="10dp"
                        android:text="@string/ageMain"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:hint="@string/ageMain"
                        android:inputType="numberSigned"
                        android:text="0" />

                </TableRow>

                <TableRow
                    android:id="@+id/trSex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:paddingVertical="10dp">

                    <RadioGroup
                        android:layout_width="487dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/lbSex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:paddingHorizontal="10dp"
                            android:text="@string/sexMain"
                            android:textAlignment="viewStart"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/femaleMain" />

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/maleMain" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:id="@+id/trSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:text="@string/optionSaveMain"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/trStorages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:textAlignment="center">

                        <RadioButton
                            android:id="@+id/rbSharedSave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:paddingVertical="15dp"
                            android:text="@string/saveSharedMain"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <RadioButton
                            android:id="@+id/rbInternalSave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="15dp"
                            android:text="@string/saveInternaldMain" />

                        <RadioButton
                            android:id="@+id/rbExternalSave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/saveExternaldMain" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:id="@+id/trButtonSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:onClick="saving"
                        android:paddingVertical="10dp"
                        android:text="@string/saveMain" />

                </TableRow>

                <TableRow
                    android:id="@+id/trLoad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lbLoad"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:text="@string/optionLoadMain"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/trLoadings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbSharedLoad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:paddingVertical="15dp"
                            android:text="@string/loadSharedMain" />

                        <RadioButton
                            android:id="@+id/rbInternalLoad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="15dp"
                            android:text="@string/loadInternaldMain" />

                        <RadioButton
                            android:id="@+id/rbExternalLoad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="15dp"
                            android:text="@string/loadExternaldMain" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:id="@+id/trButtonLoad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnLoad"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="loading"
                        android:paddingVertical="10dp"
                        android:text="@string/loadMain" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>